--- a/projetoCrud/crud/templates/index.html
+++ b/projetoCrud/crud/templates/index.html
@@ -13,6 +13,10 @@
                 <li>{{ tarefa.nome }}
                     <a href="{% url 'updateTarefa' tarefa.id %}"> Editar</a>
                      <a href="{% url 'delete' tarefa.id %}"> Deletar</a>
+                     <form method="post" action="{% url 'checkedTarefa' tarefa.id %}">
+                        {% csrf_token %}
+                        <button type="submit">Check</button>
+                    </form>
                 </li>
                 {% empty %}
                 <li>Não existe nenhuma Tarefa ainda!</li>
@@ -35,7 +39,117 @@
                     {% endif %}
             </div>
         </div>
+        <div>
+            <h1>Tarefas Concluídas</h1>
+<ul>
+    {% for tarefa_concluida in tarefas_concluidas %}
+        <li>{{ tarefa_concluida.nome }}</li>
+    {% empty %}
+        <li>Nenhuma tarefa concluída ainda!</li>
+    {% endfor %}
+</ul>
+        </div>
 </div>
+<style>
+     body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            width: 80%;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+    .listaTarefas {
+        margin-bottom: 20px;
+    }
+
+    h1 {
+        color: #333;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    li {
+        margin-bottom: 10px;
+    }
+
+    a {
+        text-decoration: none;
+        color: #3498db;
+        margin-right: 10px;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
+    form {
+        display: inline;
+    }
+
+    .createTarefa {
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        color: #333;
+    }
+
+    .forms {
+        margin-top: 10px;
+    }
+
+    input {
+        padding: 5px;
+        margin-right: 10px;
+    }
+
+    button {
+        padding: 5px 10px;
+        background-color: #3498db;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #2980b9;
+    }
+
+    .errorMsg {
+        margin-top: 10px;
+    }
+
+    .text-danger {
+        color: #e74c3c;
+    }
+
+    h1, h2, h3 {
+        margin-bottom: 10px;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+
+    li {
+        margin-bottom: 10px;
+    }
+</style>
 
 </body>
 </html>
